typo: forgot to surround LaTeX with dollar signs

--- a/dl/2019/01-neural_networks_deep_learning/03-shallow_neural_networks/02-programming_assignment/Planar+data+classification+with+one+hidden+layer+v5--phunc20.ipynb
+++ b/dl/2019/01-neural_networks_deep_learning/03-shallow_neural_networks/02-programming_assignment/Planar+data+classification+with+one+hidden+layer+v5--phunc20.ipynb
@@ -1138,7 +1138,7 @@
     "The **general direction** of these formulae is correct, but\n",
     "- not only do they lack of detailed derivation\n",
     "- but also are they **not entirely correct** in the strict sense, e.g.\n",
-    "  - $dZ^{[2]} = \\frac{1}{m} (A^{[2]} - Y)$ and thus the subsequent \\frac{1}{m} won't need to be disperser everywhere.\n",
+    "  - $dZ^{[2]} = \\frac{1}{m} (A^{[2]} - Y)$ and thus the subsequent $\\frac{1}{m}$ won't need to be disperser everywhere.<br>(cf. `my_derived_formulae.ipynb`)\n",
     "  - The shape of $dA^{[1]}$ and $dW^{[1]}$, etc. are more complicated and only reduced to that simple shape after being understood and transformed."
    ]
   },
@@ -1973,7 +1973,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
